Don't show special action box at start.

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -105,7 +105,7 @@
                 .power
                 .priority
               .effects
-      .js-p0.special-action.row
+      .js-p0.special-action.row{:style => "display:none"}
         .span6.special-action-card
           .well
             .name
@@ -137,7 +137,7 @@
                 .power
                 .priority
               .effects
-      .js-p1.special-action.row
+      .js-p1.special-action.row{:style => "display:none"}
         .span6.special-action-card
           .well
             .name
