Fixes links in challenge emails.

--- a/app/views/user_mailer/challenge.html.haml
+++ b/app/views/user_mailer/challenge.html.haml
@@ -3,7 +3,7 @@
   You've been issued a challenge by
   = "#{@challenger.email}."
   Click
-  = link_to(@game, "here")
+  = link_to("here", @game)
   to play this game!
 %p
   Thanks, Battlecon Online
