--- a/app/views/user_mailer/challenge.text.erb
+++ b/app/views/user_mailer/challenge.text.erb
@@ -1,5 +1,5 @@
 You've been challenged!
 
-You've been issued a challenge by <%= @challenger.email %>. Click <%= link_to(@game, "here") %> to play this game!
+You've been issued a challenge by <%= @challenger.email %>. Click <%= link_to("here", @game) %> to play this game!
 
 Thanks, Battlecon Online
