Moves submit buttons directly below the event log.

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -84,6 +84,7 @@
         %p event log is great!
     .span3
       .well.js-current-effects.js-p1
+  .js-answers.row
   .row.attack-pairs
     .span6
       .js-p0.attack-pair.row
@@ -149,7 +150,6 @@
       .row.js-p1
         .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
           .btn.js-submit-attack-pair Submit
-  .js-answers
   .free-form
     .row
       .span4.offset4
