--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -84,7 +84,8 @@
         %p event log is great!
     .span3
       .well.js-current-effects.js-p1
-  .js-answers.row
+  .row
+    .js-answers.span12
   .row.attack-pairs
     .span6
       .js-p0.attack-pair.row
