--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -85,7 +85,7 @@
     .span3
       .well.js-current-effects.js-p1
   .row
-    .js-answers.span12
+    .js-answers.span12.well
   .row.attack-pairs
     .span6
       .js-p0.attack-pair.row
