--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,20 +1,16 @@
 .row
   .span5
-    .well.p0header.header
-      = current_game.p0.email
-      - if current_game.play.characters
-        as:
-        .label.label-info= current_game.play.characters[0].name.capitalize
-      .p.character-desc
+    .well.js-p0.header
+      %span.label.label-info.player-name= current_game.p0.email
+      %span.label.label-info.character-name
+      %span.label.label-info.finisher
   .span2
     %h3.js-current-beat
   .span5
-    .well.p1header.header
-      = current_game.p1.email
-      - if current_game.play.characters
-        as:
-        .label.label-important= current_game.play.characters[1].name.capitalize
-      .p.character-desc
+    .well.js-p1.header
+      %span.label.label-important.player-name= current_game.p1.email
+      %span.label.label-important.character-name
+      %span.label.label-important.finisher
 .js-loading
   Loading...
 .js-choose-character{:style => "display: none"}
