User player names not emails.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,7 +71,7 @@
                 }
                 $(requiredInputCount)
               %li
-                = link_to(current_user.email, current_user, class: '#my-profile')
+                = link_to(current_user.name, current_user, class: '#my-profile')
               %li.logged-in
                 %a#personaLogout{href: '#'} Logout
             - elsif session[:email]
