--- a/app/views/user_mailer/challenge.html.haml
+++ b/app/views/user_mailer/challenge.html.haml
@@ -1,7 +1,7 @@
 %h1 You've been challenged!
 %p
   You've been issued a challenge by
-  = "#{@challenger.email}."
+  = "#{@challenger.name}."
   Click
   = link_to("here", game_url(@game))
   to play this game!
