--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -8,7 +8,7 @@
         %ul.dropdown-menu
           - User.except(current_user).each do |user|
             %li
-              = link_to user.email, challenge_path(opponent_id: user.id)
+              = link_to user.name, challenge_path(opponent_id: user.id)
   %tr
     %th Active Games
   -Game.active.order("created_at").each do |game|
