--- a/app/views/user_mailer/challenge.text.erb
+++ b/app/views/user_mailer/challenge.text.erb
@@ -1,5 +1,5 @@
 You've been challenged!
 
-You've been issued a challenge by <%= @challenger.email %>. Visit <%= game_url(@game) %> to play this game!
+You've been issued a challenge by <%= @challenger.name %>. Visit <%= game_url(@game) %> to play this game!
 
 Thanks, Battlecon Online
