--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -32,6 +32,11 @@
   min-height: 90px;
 }
 
+.meta {
+  position: absolute;
+  text-align: center;
+}
+
 .header .character-desc {
   display: none;
   /*position: absolute;
