--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -6,7 +6,7 @@
       %span.label.label-info.character-name
       %span.label.label-info.finisher
       %a.btn.btn-mini.btn-warning.concede{style: "display: none"} &times;
-      %a.btn.btn-mini.btn-mini.btn-primary.js-cancel{style: "display: none"}
+      %a.btn.btn-mini.btn-mini.btn-primary.js-undo{style: "display: none"}
         %i.icon-arrow-left
   .span2
     %h3.js-current-beat
@@ -17,7 +17,7 @@
       %span.label.label-important.character-name
       %span.label.label-important.finisher
       %a.btn.btn-mini.btn-warning.concede{style: "display: none"} &times;
-      %a.btn.btn-mini.btn-mini.btn-primary.js-cancel{style: "display: none"}
+      %a.btn.btn-mini.btn-mini.btn-primary.js-undo{style: "display: none"}
         %i.icon-arrow-left
 .js-loading
   Loading...
