--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -6,6 +6,8 @@
       %span.label.label-info.character-name
       %span.label.label-info.finisher
       %a.btn.btn-mini.btn-warning.concede{style: "display: none"} &times;
+      %a.btn.btn-mini.btn-mini.btn-primary.js-cancel{style: "display: none"}
+        %i.icon-arrow-left
   .span2
     %h3.js-current-beat
   .span5
@@ -15,6 +17,8 @@
       %span.label.label-important.character-name
       %span.label.label-important.finisher
       %a.btn.btn-mini.btn-warning.concede{style: "display: none"} &times;
+      %a.btn.btn-mini.btn-mini.btn-primary.js-cancel{style: "display: none"}
+        %i.icon-arrow-left
 .js-loading
   Loading...
 .js-choose-character{:style => "display: none"}
