Add indicator for special action availability

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -5,6 +5,8 @@
       %span.label.label-info.player-name= current_game.p0.name
       %span.label.label-info.character-name
       %span.label.label-info.finisher
+      %span.label.label-info.js-special-action-available
+        %i.icon-star
       %a.btn.btn-mini.btn-warning.concede{style: "display: none"} &times;
       %a.btn.btn-mini.btn-mini.btn-primary.js-undo{style: "display: none"}
         %i.icon-arrow-left
@@ -16,6 +18,8 @@
       %span.label.label-important.player-name= current_game.p1.name
       %span.label.label-important.character-name
       %span.label.label-important.finisher
+      %span.label.label-important.js-special-action-available
+        %i.icon-star
       %a.btn.btn-mini.btn-warning.concede{style: "display: none"} &times;
       %a.btn.btn-mini.btn-mini.btn-primary.js-undo{style: "display: none"}
         %i.icon-arrow-left
