--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -20,7 +20,7 @@
           .label.label-warning Invalid Game.
   %tr
     %th Inactive Games
-  -Game.inactive.order("created_at").each do |game|
+  -Game.inactive.order("updated_at DESC").limit(10).each do |game|
     %tr
       %td
         - begin
