--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,13 +1,21 @@
-%row
-  .span8.offset2.well
-    = form_for(@user) do |f|
-      %fieldset
-        %legend Settings
-        = f.label :email_notifications_enabled do
-          = f.check_box :email_notifications_enabled
-          Email notification on challenge
-        = f.label :chime_enabled do
-          = f.check_box :chime_enabled
-          Audio chime when new input is required
-        = f.submit("Update Settings", class:'btn')
-        / <button type="submit" class="btn">Sign in</button>
+.well
+  = form_for(@user) do |f|
+    %fieldset
+      %legend Settings
+      = f.label :email_notifications_enabled do
+        = f.check_box :email_notifications_enabled
+        Email notification on challenge
+      = f.label :chime_enabled do
+        = f.check_box :chime_enabled
+        Audio chime when new input is required
+      = f.submit("Update Settings", class:'btn')
+%table.table.table-striped.table-bordered.table-hover
+  %tr
+    %th Recent Games
+  -Game.for_user(@user).order("created_at").each do |game|
+    %tr
+      %td
+        - begin
+          = game_string(game)
+        - rescue
+          .label.label-warning Invalid Game.
