--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -88,14 +88,11 @@
       .well.js-current-effects.js-p0
     .span6
       .well.event-log
-        %h6 Game log
-        %p Event here!
-        %p another event!
-        %p event log is great!
     .span3
       .well.js-current-effects.js-p1
   .row
-    .js-answers.span12.well
+    %span.js-answers.span10
+    %span.js-timer.span2
   .row.attack-pairs
     .span6
       .js-p0.attack-pair.row
