--- a/app/views/home/landing.html.haml
+++ b/app/views/home/landing.html.haml
@@ -2,14 +2,12 @@
   %h1 Welcome to Battlecon
 .row
   .span4
-    %h2 Play games online
-    %p You'll need to be logged in if you want to play games. But that's ok because it's super easy.
+    %h2 What is this?
+    %p An easy way to play battlecon, online. Just log in, find a game (randomly, or play with a friend), and you're rolling!
+    %p Online play supports a (growing) number of characters from the base game, with support for special actions, real time and asynchronous games, and more.
   .span4
-    %h2 Learn to play the game
-    %p
-      We're too lazy to type up a whole explanation of how to play the game. You can find some rules on the official
-      = link_to "website", "http://battleconnection.com/"
-      = "."
+    %h2 New to Battlecon?
+    %p We're too lazy to type up a whole explanation of how to play the game, you can find some rules on the official #{link_to "website", "http://battleconnection.com/"}, or learn to play with this helpful #{link_to "comic", "http://battleconnection.com/index.php?option=com_content&view=category&layout=blog&id=7&Itemid=18"}.
   .span4
-    %h2 Some other stuff.
-    %p Goes here.
+    %h2 About us
+    %p This site was made by Danny Spencer, Aaron Kanter, and Alex Kilbo, and is totally unofficial and not in any way related to Level 99 Games. If you like the game, you should probably #{link_to "order a copy from their store", "http://www.lvl99games.com/store/"}.
