Add contact link.

--- a/app/views/home/landing.html.haml
+++ b/app/views/home/landing.html.haml
@@ -11,3 +11,4 @@
   .span4
     %h2 About us
     %p This site was made by Danny Spencer, Aaron Kanter, and Alex Kilbo, and is totally unofficial and not in any way related to Level 99 Games. If you like the game, you should probably #{link_to "order a copy from their store", "http://www.lvl99games.com/store/"}.
+    %p Feedback? #{link_to "Email us", "mailto:battlecononline@gmail.com"}.
