--- a/app/views/user_mailer/challenge.html.haml
+++ b/app/views/user_mailer/challenge.html.haml
@@ -3,7 +3,7 @@
   You've been issued a challenge by
   = "#{@challenger.name}."
   Click
-  = link_to("here", game_url(@game))
-  to play this game!
+  = link_to("here", challenge_url(@challenge))
+  to respond to this challenge!
 %p
   Thanks, Battlecon Online
