--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -8,7 +8,8 @@
           .btn.dropdown-toggle.disabled{data: {toggle: "dropdown"}}
             %span.caret
     %fieldset
-      %legend Settings
+      -if Challenge.configs.any?
+        %legend Settings
       - Challenge.configs.each do |config|
         = f.label config do
           = f.check_box config, disabled: true
