--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -3,7 +3,7 @@
     %fieldset
       %legend Challenge
       .input-append
-        = f.text_field :opponent, class: 'js-opponent', placeholder: 'Opponent', disabled: true
+        = f.text_field :issuer_name, class: 'js-opponent', placeholder: 'Opponent', disabled: true
         .btn-group
           .btn.dropdown-toggle.disabled{data: {toggle: "dropdown"}}
             %span.caret
