--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,14 +3,14 @@
   -if @user == current_user
     %tr
       %th Incoming Challenges
-    - Challenge.outgoing_by(@user).order("created_at").each do |challenge|
-      %tr
-        %td= link_to "vs #{challenge.receiving_user.name}", challenge
-    %tr
-      %th Outgoing Challenges
     - Challenge.incoming_for(@user).order("created_at").each do |challenge|
       %tr
-        %td= link_to "vs #{challenge.issuing_user.name}", challenge
+        %td= link_to "From #{challenge.issuing_user.name}", challenge
+    %tr
+      %th Outgoing Challenges
+    - Challenge.outgoing_by(@user).order("created_at").each do |challenge|
+      %tr
+        %td= link_to "To #{challenge.receiving_user.name}", challenge
   %tr
     %th Current Games
   -Game.for_user(@user).active.order("created_at").each do |game|
