Aligns the character select buttons.

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -27,12 +27,13 @@
   Loading...
 .js-choose-character{:style => "display: none"}
   .row
-    - GamePlay.character_names.each do |name|
-      %a.btn{charactername: name}
-        %div
-          = image_tag "/images/character_icons/#{name}.png", :style => "height: 100px"
-        = name
-        = badges(character_badges(name))
+    .span12
+      - GamePlay.character_names.each do |name|
+        %a.btn{charactername: name}
+          %div
+            = image_tag "/images/character_icons/#{name}.png", :style => "height: 100px"
+          = name
+          = badges(character_badges(name))
 .js-in-game{:style => "display: none"}
   .row
     .js-p0
