Updates challenge headings.

--- a/app/views/challenges/new.html.haml
+++ b/app/views/challenges/new.html.haml
@@ -1,7 +1,7 @@
 .well
   = form_for(@challenge) do |f|
     %fieldset
-      %legend Challenge
+      %legend New Challenge
       .input-append
         = f.text_field :opponent, class: 'js-opponent', placeholder: 'Opponent', autocomplete: 'off'
         .btn-group
