--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -1,7 +1,7 @@
 .well
   = form_for(@challenge) do |f|
     %fieldset
-      %legend Challenge
+      %legend Pending Challenge
       = f.text_field :issuer_name, class: 'js-opponent', placeholder: 'Opponent', disabled: true
       Vs
       = f.text_field :opponent, class: 'js-opponent', placeholder: 'Opponent', disabled: true
