--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -2,9 +2,16 @@
   /*background-color: #ccc;*/
 }
 .space {
-  text-align: center;
   margin-bottom: 5px;
 }
+.space:before    {position: absolute;}
+.space.s0:before {content: "0"; color: #aaa;}
+.space.s1:before {content: "1"; color: #aaa;}
+.space.s2:before {content: "2"; color: #aaa;}
+.space.s3:before {content: "3"; color: #aaa;}
+.space.s4:before {content: "4"; color: #aaa;}
+.space.s5:before {content: "5"; color: #aaa;}
+.space.s6:before {content: "6"; color: #aaa;}
 
 .space.clickToMove {
   cursor: pointer;
