--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -45,8 +45,9 @@
 }
 
 .icon-juto {
-  background-image: url("public/images/character_icons/juto.png");
-  background-size: 20, 22
+  background-image: url("/images/character_icons/juto_icon.png");
+  background-size: contain;
+  background-position: 0px 0px;
 }
 
 .header .character-desc {
